noticket: Modernize old tests to use AssertJ instead of org.junit.Assert